@@ -278,5 +278,5 @@ rx2_ids = {"EQ  ":rx2_eq, "TRSH":rx2_trsh,  "COMP":rx2_comp, "SLCE":rx2_slce,
 		"SINF":rx2_sinf, "GLOB":rx2_glob, "RCYX":rx2_rcyx, "RECY":rx2_recy,
 		"HEAD": rx2_head}
 
-def open (buf,page):
-	parse (page.model,buf,0)
+def open (buf,page,parent):
+	parse (page.model,buf,0,parent)
